--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="dark2">
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/img/icon16.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factorial!</title>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/img/icon16.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Factorial!</title>
 </head>
 <body>
 <div id="app"></div>
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
