--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark2">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/img/icon16.png">
